@@ -1,0 +1,6 @@
+Plain text put command format.
+R
+text/plain
+us-ascii
+7bit
+en
