@@ -1,0 +1,2 @@
+The $COMMAND command succeeded.
+"$PATH$FILE" was deleted.
