@@ -1,0 +1,2 @@
+The $COMMAND command succeeded.
+The directory "$PATH$FILE" was created or updated.
