@@ -1,0 +1,6 @@
+<!-- Majordomo put_delete format file -->
+<p>
+The $COMMAND command succeeded.  
+"$FILE" was deleted.
+</p>
+
