@@ -1005,7 +1005,24 @@ stalls or fails.
 
 put
 ---
-(text, wwwadm)  This file is displayed when the put command succeeds.
+(text, wwwadm)  This file is displayed when the put command succeeds in
+creating or updating a file.
+
+(standard plus CGIDATA, CGIURL, CMDPASS, COMMAND, FILE, PARENT, PATH, USER)
+
+
+put_delete
+----------
+(text, wwwadm)  This file is displayed when the put command succeeds in
+deleting a file or directory.
+
+(standard plus CGIDATA, CGIURL, CMDPASS, COMMAND, FILE, PARENT, PATH, USER)
+
+
+put_dir
+-------
+(text, wwwadm)  This file is displayed when the put command succeeds in
+creating or updating a directory.
 
 (standard plus CGIDATA, CGIURL, CMDPASS, COMMAND, FILE, PARENT, PATH, USER)
 
