@@ -1,3 +1,13 @@
+2004-09-11  Michael Yount <csf@moscow.com>
+
+	* bin/mj_wwwadm:  Add support for directory and file
+	creation and deletion.
+
+	* lib/Majordomo.pm:  (_put) Untaint the file name.
+
+	* lib/Mj/Format.pm:  (put)  Support the put_delete
+	and put_dir format files.
+
 2004-09-10  Michael Yount <csf@moscow.com>
 
 	* lib/Mj/Format.pm:  (put)  Support PARENT and PATH
